<resources>
    <string name="app_name">MediNote</string>
    <string name="sign_in">SignIn</string>
    <string name="please_enter_your_4_digit_password">Please enter your 4 digit password</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="new_account">New Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="create_a_account">Create a Account</string>
    <string name="sign_up_description1">Sign in to Medinote to track and visualize your blood pressure easily</string>
    <string name="switch_year">Switch Year</string>
    <string name="sys">SYS</string>
    <string name="dia">DIA</string>
    <string name="pul">PUL</string>
    <string name="mmhg">mmHg</string>
    <string name="min">/mIn</string>
    <string name="save_measurement">Save Measurement</string>
    <string name="analyse_records">Analyse Records</string>
    <string name="daily_records">Daily Records</string>
    <string name="summary">Summary</string>
    <string name="checkup_rounds">Checkup Rounds</string>
    <string name="monthly_records">Monthly Records</string>
    <string name="weekly_records">Weekly Records</string>
    <string name="all_records">All Records</string>
    <string name="no_results">No Results</string>
    <string name="profile">Profile</string>
    <string name="manage_account">Manage Account</string>
    <string name="update_account">Update Account</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="logout">Logout</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="date">Date</string>
    <string name="text_separate">|</string>
    <string name="value">Value</string>
    <string name="chart_caution">Caution: This chart represents the average values of all SYS, PUL, DIA measurements taken for each day, and you can view full details of all measurements in the All Records section.</string>
    <string name="welcome_to">Welcome To</string>
    <string name="welcome_continue">Continue</string>
    <string name="welcome_screen_text">MediNote helps you track and understand your blood pressure with ease. Stay healthy, stay informed!</string>
    <string name="version">V1.0.0</string>
    <string name="settings">Settings</string>
    <string name="developed_by">Developed by Dulanjaya Bhanu</string>
    <string name="settings_description1">I created MediNote because I saw how many people struggle to keep track of their blood pressure readings using notebooks. Writing them down is inconvenient, and it’s hard to see how your blood pressure changes over time. That’s why I built this app to make tracking simple, visual, and effortless.</string>
    <string name="settings_description2">With MediNote, you can easily record your blood pressure and view trends by day, week, or month. The app is designed to be user-friendly, completely offline, and 100% private-your data stays with you. No cloud storage, no sharing, just you and your health records.</string>
    <string name="settings_description3">I’ve also made MediNote an open-source project so anyone can contribute, improve, and expand its features. And this is just the beginning! I’m continuously working on new updates to make it even better.</string>
    <string name="settings_description4">Thank you for using MediNote. Stay tuned for more features!</string>
    <string name="app_reset_warning_message">Resetting the app will delete all your data, including your account details and all recorded blood pressure measurements. This action cannot be undone.</string>
    <string name="app_reset">App Reset</string>
    <string name="go_to_project">Go To Project</string>
    <string name="license">License</string>
    <string name="sign_up">SignUp</string>
</resources>
