<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2"
    tools:context=".WelcomeScreenActivity">

    <ImageView
        android:id="@+id/welcomeScreenImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeScreenTextView2"
        app:layout_constraintEnd_toEndOf="@+id/welcomeScreenTextView"
        app:layout_constraintStart_toStartOf="@+id/welcomeScreenTextView"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcomeScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/app_name"
        android:textColor="@color/primary_color_black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/welcomeScreenTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_light"
        android:text="@string/welcome_to"
        android:textColor="@color/secondary_color_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeScreenTextView"
        app:layout_constraintEnd_toEndOf="@+id/welcomeScreenTextView"
        app:layout_constraintStart_toStartOf="@+id/welcomeScreenTextView" />

    <TextView
        android:id="@+id/welcomeScreenTextView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/welcome_screen_text"
        android:textAlignment="center"
        android:textColor="@color/secondary_color_black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeScreenTextView" />

    <Button
        android:id="@+id/welcomeScreenButtonContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/primary_color_green"
        android:fontFamily="@font/inter_bold"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/welcome_continue"
        android:textColor="@color/primary_color_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeScreenTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeScreenTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/version"
        android:textColor="@color/primary_color_green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcomeScreenButtonContinue"
        app:layout_constraintStart_toStartOf="@+id/welcomeScreenButtonContinue" />
</androidx.constraintlayout.widget.ConstraintLayout>