<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color_white"
    tools:context=".DailyRecordsActivity">

    <ImageButton
        android:id="@+id/dailyRecordsImageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background1"
        android:padding="10dp"
        android:src="@drawable/left_arrow_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/left_arrow_dark"
        tools:srcCompat="@drawable/left_arrow_dark" />

    <TextView
        android:id="@+id/dailyRecordsTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/daily_records"
        android:textColor="@color/primary_color_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/dailyRecordsImageButtonBack"
        app:layout_constraintStart_toEndOf="@+id/dailyRecordsImageButtonBack"
        app:layout_constraintTop_toTopOf="@+id/dailyRecordsImageButtonBack" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyRecordsImageButtonBack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dailyRecordsTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/summary"
                android:textColor="@color/primary_color_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/dailyRecordsLineChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input_field_background1">

            </com.github.mikephil.charting.charts.LineChart>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/input_field_background1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/dailyRecordsImageView1"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/chart_legend_circle1" />

                <TextView
                    android:id="@+id/dailyRecordsTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:paddingStart="4dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sys"
                    android:textColor="@color/secondary_color_black"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/dailyRecordsImageView3"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/chart_legend_circle2" />

                <TextView
                    android:id="@+id/dailyRecordsTextView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:paddingStart="4dp"
                    android:paddingEnd="8dp"
                    android:text="@string/pul"
                    android:textColor="@color/secondary_color_black"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/dailyRecordsImageView5"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/chart_legend_circle3" />

                <TextView
                    android:id="@+id/dailyRecordsTextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:paddingStart="4dp"
                    android:text="@string/dia"
                    android:textColor="@color/secondary_color_black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/dailyRecordsTextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/text_separate"
                    android:textColor="@color/neutral_color_black"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/dailyRecordsImageView4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/y_axis_dark" />

                <TextView
                    android:id="@+id/dailyRecordsTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/value"
                    android:textColor="@color/secondary_color_black"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/dailyRecordsTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/text_separate"
                    android:textColor="@color/neutral_color_black"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/dailyRecordsImageView2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/x_axis_dark" />

                <TextView
                    android:id="@+id/dailyRecordsTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/date"
                    android:textColor="@color/secondary_color_black"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/dailyRecordsTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/all_records"
                android:textColor="@color/primary_color_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dailyRecordsNoResultsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingEnd="16dp"
                android:paddingBottom="24dp"
                android:text="@string/no_results"
                android:textAlignment="center"
                android:textColor="@color/neutral_color_black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyRecordsRecyclerViewAllRecords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>